--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,14 @@ attrs==21.4.0
 backcall==0.2.0
 decorator==5.1.1
 Django==3.2
+django-filter==21.1
+djangorestframework==3.13.1
 executing==0.8.3
+importlib-metadata==4.11.4
 iniconfig==1.1.1
 ipython==8.4.0
 jedi==0.18.1
+Markdown==3.3.7
 matplotlib-inline==0.1.3
 packaging==21.3
 parso==0.8.3
@@ -29,3 +33,4 @@ stack-data==0.2.0
 tomli==2.0.1
 traitlets==5.2.2.post1
 wcwidth==0.2.5
+zipp==3.8.0
